# GitHub-vcpkg-cmake-tests

./: CMakeLists.txt  vcpkg.json
.github/workflows/: main.yml
native/: CMakeLists.txt  vcpkg.json
native/src/: bitmap.cpp  canvas.cpp  compatibility.cpp  data.cpp  document.cpp  image.cpp  main.cpp  pdf.cpp  picture.cpp  pictureRecorder.cpp  stream.cpp  svg.cpp  svgCanvas.cpp  xps.cpp
native/src/text/: fontCollection.cpp  paragraph.cpp  paragraphBuilder.cpp  paragraphStyle.cpp  textStyle.cpp  typefaceFontProvider.cpp
src/: test.cpp
